<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="50dp"
android:paddingTop="5dp"
android:paddingBottom="5dp"
android:background="#E9F6F9"
android:orientation="horizontal">

        <ImageButton
            android:id="@+id/id1_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:scaleType="centerInside"
            android:background="#E9F6F9"
            android:contentDescription="@string/home"
            android:src="@drawable/home"/>
        <ImageButton
            android:id="@+id/id4_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:scaleType="centerInside"
            android:background="#E9F6F9"
            android:contentDescription="@string/preparation"
            android:src="@drawable/preparation"/>
        <ImageButton
            android:id="@+id/id5_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:scaleType="centerInside"
            android:background="#E9F6F9"
            android:contentDescription="@string/memo"
            android:src="@drawable/memo"/>
        <ImageButton
            android:id="@+id/id6_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:scaleType="centerInside"
            android:background="#E9F6F9"
            android:contentDescription="@string/thought"
            android:src="@drawable/thought"/>

</LinearLayout>